--- a/formValidation.html
+++ b/formValidation.html
@@ -162,7 +162,7 @@
         <label for="comments">About:</label>
         <textarea></textarea>
     </p>
-
+<input type="submit">
     </form>
 </body>
 </html>
